# apcv

./: .gitignore  test_opencv.sln
panorama/: panorama.cpp  panorama.vcxproj  panorama.vcxproj.filters
test_opencv/: Source.cpp  boost.cpp  camera.yaml  test_opencv.vcxproj  test_opencv.vcxproj.filters  view_frames.cpp
test_opencv/04_geometry/: CMakeLists.txt  calibration.cpp  features.cpp  homography.cpp  hw_3.cpp  pose.cpp  rectify.cpp
test_opencv/05_learning/: CMakeLists.txt  bow.cpp  detector.cpp  faces.cpp  hw_learning.cpp
test_opencv/05_learning/cars/: cascade.xml  negative.txt  positive.txt
test_opencv/05_learning/faces/training/: people.txt
test_opencv/06_video/: CMakeLists.txt  hw_5.cpp
